Fix placeholder alignment for Safari

--- a/source/components/form.styl
+++ b/source/components/form.styl
@@ -8,6 +8,7 @@
     border none
     border-radius 0
     box-shadow $box-shadow
+    line-height normal
     padding .8em 1em
     transition box-shadow $transition-duration
 
